--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# My stuff
+public/videos/cavalinho.mp4
+public/videos/
+
+
 # dependencies
 /node_modules
 /.pnp
